--- a/main page.css
+++ b/main page.css
@@ -2,10 +2,12 @@ body {
 	background-color: #252525;
 }
 
-/* Navbar Start */
+/*-------------------Navbar Start-----------------------*/
 .navbar {
 	background-color: #191919;
 	width: 100%;
+	max-height: 69px;
+	margin: 0;
 	border: none;
 	border-bottom: 1px solid #4286f4;
 	border-radius: 0px;
@@ -17,23 +19,22 @@ body {
 	color: #4286f4;
 }
 
-.nav_left {
-	display: flex;
-	position: relative;
-	top: 40%;
-	top: 20px;
-}
 
 .nav_right {
 	float: right;
-	position: relative;
 	text-align: right;
 	top: 12px;
+	display: inline;
 }
 
 #menu_text {
-	position: relative;
-	top: 18px;
+	margin-top: 25px;
+	margin-bottom: 0px;
+}
+
+.nav_name {
+	margin: 0 auto;
+	float: none;
 }
 
 .nav_name h1{
@@ -42,10 +43,13 @@ body {
 	text-align: center;
 }
 
-/* Navbar End */
+.menu_icon {
+		display: none;	}
+
+/*------------------------------Navbar End---------------------------------*/
 
 
-/* Main Text Start */
+/*----------------------------Main Text Start------------------------------*/
 #myText {
 	color: white;
 	text-align: center;
@@ -81,9 +85,9 @@ body {
 	font-style: italic;
 }
 
-/* Main Text End */
+/*----------------------------Main Text End---------------------------------*/
 
-/* Main Content Start */
+/*-------------------------Main Content Start-------------------------------*/
 #main_wrapper {
 	background-color: #252525;
 	position: absolute;
@@ -135,7 +139,7 @@ body {
 	top: 4px;
 }
 
-/* Main Content End */
+/*-----------------------Main Content End-----------------------*/
 
 #scroll_btn {
 	display: hidden;
@@ -148,4 +152,47 @@ body {
 	height: 60px;
 	width: 60px;
 	border-radius: 360px;
+}
+
+/*----------------------Mobile Media Query----------------------*/
+
+@media screen and (max-width: 1096px) {
+	.navbar_left ul li , .navbar_left ul{
+		display: none;
+	}
+
+	.menu_icon {
+		display: inline-block;
+		float: left;
+		position: relative;
+		height: 30px;
+		width: 50px;
+		top: 20px;
+	}
+
+	
+
+	.navbar_left:hover ul, .navbar_left:hover ul li{
+		display: inline-block;
+	}
+
+	.navbar_left ul{
+		background-color: black;
+		position: fixed;
+		height: 150px;
+		width: 130px;
+		top: 50px;
+		left: 60px;
+	}
+
+	.navbar_left ul li {
+		position: relative;
+		
+		top: -10px;
+		left: -35px;
+	}
+
+	#website_1 {
+	}
+
 }
