--- a/main page.css
+++ b/main page.css
@@ -1,8 +1,20 @@
+
+
 body {
 	background-color: #252525;
 }
 
+
 /*-------------------Navbar Start-----------------------*/
+
+#show\/hide {
+	display: none;
+}
+
+.dropdown_menu {
+	display: none;
+}
+
 .navbar {
 	background-color: #191919;
 	width: 100%;
@@ -111,7 +123,6 @@ body {
 
 #website_1 {
 	position: relative;
-	max-height: 600px
 	height: auto;
 	width: auto;
 	margin: 0;
@@ -156,43 +167,92 @@ body {
 
 /*----------------------Mobile Media Query----------------------*/
 
-@media screen and (max-width: 1096px) {
+@media screen and (min-width: 550px) and (max-width: 1096px) {
+
+	#show_hide {
+		display: none;
+	}
+
 	.navbar_left ul li , .navbar_left ul{
 		display: none;
 	}
 
 	.menu_icon {
-		display: inline-block;
-		float: left;
-		position: relative;
-		height: 30px;
-		width: 50px;
-		top: 20px;
+			display: inline-block;
+			float: left;
+			position: relative;
+			height: 30px;
+			width: 50px;
+			top: 20px;
 	}
 
-	
 
-	.navbar_left:hover ul, .navbar_left:hover ul li{
-		display: inline-block;
+	.menu_icon:hover{
+		opacity: 0.5;
+		top: 22px;
 	}
 
-	.navbar_left ul{
-		background-color: black;
+
+	.dropdown_menu {
 		position: fixed;
-		height: 150px;
-		width: 130px;
 		top: 50px;
-		left: 60px;
+		left: 30px;
+		width: 200px;
+		height: 100px;
+		background-color: black;
+		border-radius: 10px;
+		display: none;
+
+
 	}
 
-	.navbar_left ul li {
-		position: relative;
-		
-		top: -10px;
-		left: -35px;
+	.dropdown_menu a {
+		color: white;
+		font-size: 25px;
+		margin-left: 10px;
+		line-height: 2;
+		text-decoration: none;
+		display:none;
+	}
+
+	.dropdown_menu a:hover {
+		opacity: 0.5;
+	}
+
+	.dropdown_menu a:active {
+		color: #4286f4;
+	}
+
+	#main_wrapper {
+		padding: 0;
+	}
+
+	#container_1 {
+		padding: 0;
 	}
 
 	#website_1 {
+		padding: 0;
+		width: 100%;
+	}
+
+	#website1_name {
+		width: 502px;
+		margin: 0 auto;
+		padding: 0;
+	}
+
+	#website_2 {
+		padding: 70px 0px 0px 0px;
+
+		width: 100%;
+	}
+
+	#website2_name {
+		width: 502px;
+		margin: 0 auto;
+		padding: 0;
 	}
 
 }
+
